# LocalMind

./: .replit  enhanced_search.py  main.py  package.json  pyproject.toml  requirements.txt  setup.sh
attached_assets/: Pasted--bin-bash-LocalMind-Replit-Setup-Script-Run-this-in-your-Python-Repl-s-Shell-echo-Set-1754561381257_1754561381257.txt  Pasted--enhanced-main-py-Enhanced-LocalMind-for-Replit-Adds-real-search-functionality-and-document--1754569538868_1754569538869.txt  Pasted--enhanced-search-py-Enhanced-Search-Module-for-LocalMind-Add-this-to-your-existing-project-f-1754574872270_1754574872270.txt  Pasted--integration-py-Simple-integration-file-to-add-enhanced-search-to-your-existing-LocalMind-Ad-1754575424009_1754575424009.txt  Pasted--main-py-Fixed-version-with-working-upload-LocalMind-Fixed-Upload-Version-for-Replit-Com-1754571069811_1754571069812.txt
documents/samples/: features.md  welcome.txt
static/css/: style.css
static/js/: app.js
templates/: index.html
